# QAT

FaceDetect-QAT/: Dockerfile  README.md  detect_sample.py  train.py  train_quantization.py  train_quantization_sg.py  utils_train.py
FaceDetect-QAT/data/: config.py  data_argument.py  wider_face.py
FaceDetect-QAT/layers/functions/: prior_box.py
FaceDetect-QAT/layers/modules/: multibox_loss.py
FaceDetect-QAT/models/: net_slim.py  qat_slim.py
FaceDetect-QAT/utils/: box_utils.py  detect.py  eval_widerface.py  optimizer.py  test_widerface.py  timer.py
FaceDetect-QAT/utils/ncnn_compare/: CMakeLists.txt  model_onnx.py  ncnn_forward.cpp  test_widerface.py
FaceDetect-QAT/utils/nms/: py_cpu_nms.py
